# pipeline_planner_open

./: CHANGELOG.rst  CMakeLists.txt  LICENSE  README.md  bgp_plugin.xml  package.xml
cfg/: PipelinePlanner.cfg
include/pipeline_planner/: ppplanner.h
msg/: RobotPosition.msg  SegmentInfo.msg
src/: ppplanner_core.cpp  ppplanner_cudalib.cu  ppplanner_node.cpp
srv/: GetCheckpoints.srv  GetNumofCheckpoints.srv  GetReadStatus.srv  GetRobotStatus.srv  InquireSegments.srv  ReceiveCheckpoints.srv  SetARadius.srv  SetARightshift.srv
